{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 51,
  "lineage": "a0766829-f056-db4f-6c7b-050c13c30e73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudx-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:internet-gateway/igw-0dcceb1e5bf657e65",
            "id": "igw-0dcceb1e5bf657e65",
            "owner_id": "164033467123",
            "tags": {
              "Name": "cloudx-igw"
            },
            "tags_all": {
              "Name": "cloudx-igw"
            },
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ghost_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:164033467123:loadbalancer/app/ghost-lb/6d1bd282e00c7ab9",
            "arn_suffix": "app/ghost-lb/6d1bd282e00c7ab9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ghost-lb-1473404581.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:164033467123:loadbalancer/app/ghost-lb/6d1bd282e00c7ab9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ghost-lb",
            "security_groups": [
              "sg-0dd52027a103458be"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-069686d9bbb5823aa"
              },
              {
                "subnet_id": "subnet-07f9903296f9ebb99"
              },
              {
                "subnet_id": "subnet-0d2c80c80d4b1365c"
              }
            ],
            "subnets": [
              "subnet-069686d9bbb5823aa",
              "subnet-07f9903296f9ebb99",
              "subnet-0d2c80c80d4b1365c"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0e5e001124de1a967",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2_pool",
            "aws_security_group.fargate_pool",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ghost_listener_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:164033467123:listener/app/ghost-lb/6d1bd282e00c7ab9/c6c14988c3d74482",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:164033467123:listener/app/ghost-lb/6d1bd282e00c7ab9/c6c14988c3d74482",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:164033467123:loadbalancer/app/ghost-lb/6d1bd282e00c7ab9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ghost_lb",
            "aws_security_group.alb",
            "aws_security_group.ec2_pool",
            "aws_security_group.fargate_pool",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "host_based_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:164033467123:targetgroup/ghost-ec2/e8af7fcca6124e3f",
                        "weight": 70
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:164033467123:targetgroup/ghost-fargate/c00c9413f586ffee",
                        "weight": 30
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:164033467123:listener-rule/app/ghost-lb/6d1bd282e00c7ab9/c6c14988c3d74482/9838d1e2c05b8e79",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:164033467123:listener-rule/app/ghost-lb/6d1bd282e00c7ab9/c6c14988c3d74482/9838d1e2c05b8e79",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:164033467123:listener/app/ghost-lb/6d1bd282e00c7ab9/c6c14988c3d74482",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ghost_lb",
            "aws_lb_listener.ghost_listener_ec2",
            "aws_lb_target_group.ghost-ec2",
            "aws_lb_target_group.ghost-fargate",
            "aws_security_group.alb",
            "aws_security_group.ec2_pool",
            "aws_security_group.fargate_pool",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ghost-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:164033467123:targetgroup/ghost-ec2/e8af7fcca6124e3f",
            "arn_suffix": "targetgroup/ghost-ec2/e8af7fcca6124e3f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:164033467123:targetgroup/ghost-ec2/e8af7fcca6124e3f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ghost-ec2",
            "port": 2368,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ghost-fargate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:164033467123:targetgroup/ghost-fargate/c00c9413f586ffee",
            "arn_suffix": "targetgroup/ghost-fargate/c00c9413f586ffee",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:164033467123:targetgroup/ghost-fargate/c00c9413f586ffee",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ghost-fargate",
            "port": 2368,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:route-table/rtb-0b9373ede88ad2880",
            "id": "rtb-0b9373ede88ad2880",
            "owner_id": "164033467123",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:route-table/rtb-0321143e5389be0f4",
            "id": "rtb-0321143e5389be0f4",
            "owner_id": "164033467123",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dcceb1e5bf657e65",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloudx-igw",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0f3b70ee69951cf",
            "route_table_id": "rtb-0b9373ede88ad2880",
            "subnet_id": "subnet-0e77428f1da5c5fa0"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_a",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009e3419541f49977",
            "route_table_id": "rtb-0b9373ede88ad2880",
            "subnet_id": "subnet-0897f65da96f9b705"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_b",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daf13eaa45c99a90",
            "route_table_id": "rtb-0b9373ede88ad2880",
            "subnet_id": "subnet-01034a405405663d6"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_c",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003448941cdec1c83",
            "route_table_id": "rtb-0321143e5389be0f4",
            "subnet_id": "subnet-0d2c80c80d4b1365c"
          },
          "dependencies": [
            "aws_internet_gateway.cloudx-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c3641889667d8ca",
            "route_table_id": "rtb-0321143e5389be0f4",
            "subnet_id": "subnet-07f9903296f9ebb99"
          },
          "dependencies": [
            "aws_internet_gateway.cloudx-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ed380b9f0237a36",
            "route_table_id": "rtb-0321143e5389be0f4",
            "subnet_id": "subnet-069686d9bbb5823aa"
          },
          "dependencies": [
            "aws_internet_gateway.cloudx-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_c",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:security-group/sg-0dd52027a103458be",
            "description": "defines access to alb",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-02b884e72e28c99fb"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0bcd49aa825ece4df"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd52027a103458be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "164033467123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb"
            },
            "tags_all": {
              "Name": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_pool",
            "aws_security_group.fargate_pool",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:security-group/sg-0bcd49aa825ece4df",
            "description": "allows access for ec2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bcd49aa825ece4df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2368,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2368
              }
            ],
            "name": "ec2_pool",
            "name_prefix": "",
            "owner_id": "164033467123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_pool"
            },
            "tags_all": {
              "Name": "ec2_pool"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:security-group/sg-051602b94eaa6a200",
            "description": "defines access to efs mount points",
            "egress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051602b94eaa6a200",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b884e72e28c99fb"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bcd49aa825ece4df"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs",
            "name_prefix": "",
            "owner_id": "164033467123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs"
            },
            "tags_all": {
              "Name": "efs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_pool",
            "aws_security_group.fargate_pool",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:security-group/sg-02b884e72e28c99fb",
            "description": "allows access for fargate instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b884e72e28c99fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2368,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2368
              }
            ],
            "name": "fargate_pool",
            "name_prefix": "",
            "owner_id": "164033467123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fargate_pool"
            },
            "tags_all": {
              "Name": "fargate_pool"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:security-group/sg-0e33b74b48edf4c3c",
            "description": "defines access to ghost db",
            "egress": [],
            "id": "sg-0e33b74b48edf4c3c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b884e72e28c99fb"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bcd49aa825ece4df"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql",
            "name_prefix": "",
            "owner_id": "164033467123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "tags_all": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_pool",
            "aws_security_group.fargate_pool",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:security-group/sg-01fc62c9e563b0b43",
            "description": "defines access to vpc endpoints",
            "egress": [],
            "id": "sg-01fc62c9e563b0b43",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc_endpoint",
            "name_prefix": "",
            "owner_id": "164033467123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc_endpoint"
            },
            "tags_all": {
              "Name": "vpc_endpoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:subnet/subnet-0e77428f1da5c5fa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e77428f1da5c5fa0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164033467123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_a"
            },
            "tags_all": {
              "Name": "private_a"
            },
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:subnet/subnet-0897f65da96f9b705",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0897f65da96f9b705",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164033467123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_b"
            },
            "tags_all": {
              "Name": "private_b"
            },
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:subnet/subnet-01034a405405663d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01034a405405663d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164033467123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_c"
            },
            "tags_all": {
              "Name": "private_c"
            },
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:subnet/subnet-0bab0bf03c36c742a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bab0bf03c36c742a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164033467123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_db_a"
            },
            "tags_all": {
              "Name": "private_db_a"
            },
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:subnet/subnet-018f235f66f93361a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018f235f66f93361a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164033467123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_db_b"
            },
            "tags_all": {
              "Name": "private_db_b"
            },
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:subnet/subnet-02fb4455ac4af0f54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fb4455ac4af0f54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164033467123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_db_c"
            },
            "tags_all": {
              "Name": "private_db_c"
            },
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:subnet/subnet-0d2c80c80d4b1365c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2c80c80d4b1365c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "164033467123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_a"
            },
            "tags_all": {
              "Name": "public_a"
            },
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:subnet/subnet-07f9903296f9ebb99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f9903296f9ebb99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "164033467123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_b"
            },
            "tags_all": {
              "Name": "public_b"
            },
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:subnet/subnet-069686d9bbb5823aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069686d9bbb5823aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "164033467123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_c"
            },
            "tags_all": {
              "Name": "public_c"
            },
            "vpc_id": "vpc-0e5e001124de1a967"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164033467123:vpc/vpc-0e5e001124de1a967",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-069d46b1b7aa31c11",
            "default_route_table_id": "rtb-023689f5e9751ca33",
            "default_security_group_id": "sg-0f232d8a32d7a7c0b",
            "dhcp_options_id": "dopt-008efbca5aa9c1b36",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e5e001124de1a967",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023689f5e9751ca33",
            "owner_id": "164033467123",
            "tags": {
              "Name": "cloudx"
            },
            "tags_all": {
              "Name": "cloudx"
            }
          }
        }
      ]
    }
  ]
}